Improved lambda detection and upgraded groovy/scala